# virgil

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Readme.md  chat_with_gemma.py  docker-compose.yml  memory.txt  pyproject.toml  quiz_maker.py  setup.py  shuffle.py  simple_quiz_maker.py  storyteller.py  test_gemma.py  test_gemma_basic.py  weather.py
.cursor/rules/: pre-commit.md  pre-commit.mdc
config/: labyrinth.yaml
docs/: discord.md  install.md  language-space-analysis.md  license_header.txt  memory-rag-plan.md  model-quick-reference.md  testing-models.md  weather-api-setup.md
jetson/: Dockerfile  run.sh
labyrinth/: maze.py
scripts/: character.sh  chat_with_gemma.py  create_banner_for_blog.sh  image_for_vla_blog_post.sh  infinite_quiz_machine.sh  language_space_analysis.ipynb  shuffle.py  simple_quiz_maker.py  storyteller.py  test_llm_embedding_tf32.py  test_stable_diffusion.py
virgil/: chat.py  test.py
virgil/audio/: __init__.py  base.py  example_audiocraft.py  main.py  music.py  speech.py  test.py
virgil/backend/: __init__.py  base.py  ernie.py  gemma.py  llama.py  phi.py  qwen.py  smollm.py  tinyllama.py
virgil/friend/: __init__.py  friend.py  logo_prompt.txt  memory.py  my_friend.py  my_prompt.txt  parser.py  prompt.txt  reminder.py  scheduler.py
virgil/image/: __init__.py  base.py  diffuser.py  example_playground.py  flux.py  qwen_layered.py  qwen_layered_README.md  siglip.py
virgil/io/: channel_list.py  discord.py  discord_bot.py  files.py
virgil/labyrinth/: generate.py  labyrinth.js  main.html  maze.py
virgil/labyrinth/config/: image_prompt.txt  index.html  labyrinth.js  labyrinth.yaml  per_room_prompt.txt  prompt.txt  prompt_castle.txt
virgil/mcp/: README.md  __init__.py  cli.py  example.py  server.py
virgil/meme/: generator.py  prompt.txt
virgil/parser/: __init__.py  base.py
virgil/quiz/: __init__.py  create_html.py  create_images.py  example_quiz.html  parser.py  quiz.html  quiz_maker.py  reformat_yaml.py
virgil/services/: __init__.py  image_service.py  message_service.py
virgil/social/: __init__.py  base.py  bluesky.py
virgil/story/: __init__.py  cosmic_horror.py
virgil/utils/: __init__.py  code.py  config.py  docs.py  embeddings.py  log.py  prompt.py  weather.py  yaml_utils.py
virgil/video/: __init__.py  base.py  framepack.py  hunyuan_video_2.py  ltx_video.py  wan_2_1.py
virgil/video/examples/: run_framepack.py  run_ltx_video.py
