[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "virgil"
version = "0.1.0"
description = "A library for creating and using AI-powered chatbots and AI-powered storytelling."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Chris Paxton", email = "chris.paxton.cs@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "transformers>=4.51.0",
    "diffusers",
    "sentencepiece",
    "Pillow",
    "protobuf",
    "numpy",
    "click",
    "matplotlib",
    "discord.py",
    "python-dotenv",
    "termcolor",
    "hydra-core",
    "omegaconf",
    "hf_xet",
    "soundfile",
    "datasets",
    # audiocraft currently requires torch==2.1.0, which conflicts with other dependencies.
    # Install it manually in a separate environment if needed.
    # "audiocraft",
    "librosa",
    "decord>=0.6.0",
    "moviepy>=2.0.0",
    "torch>=2.6",
    "torchvision",
    "torchaudio",
    "bitsandbytes>=0.43.0",
    "accelerate",
    "autoawq",
]

[project.urls]
Homepage = "https://github.com/cpaxton/virgil"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "codespell",
    "mdformat"
]

[tool.setuptools]
# This tells setuptools to include package data as specified below
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["virgil"]

[tool.setuptools.package-data]
"virgil.quiz" = ["quiz.html", "example_quiz.html"]
"virgil.meme" = ["prompt.txt"]
"virgil.friend" = ["prompt.txt"]
"virgil.labyrinth" = ["config/*"]
